kubernetes/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diplom-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: diplom-app
  template:
    metadata:
      labels:
        app: diplom-app
    spec:
      imagePullSecrets:
        - name: yc-registry-secret
      containers:
        - name: diplom-app
          image: cr.yandex/crp6gcfckbknlsc51u2f/diplom-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
