kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-app
  namespace: default
spec:
  selector:
    app: diplom-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
